added .net core console sample app (#20)
* added Win32cpp sample- not cleaned

* modified and cleanup win32 cpp console app.

* modified and cleanup win32 cpp console app.

* added Win32cpp sample- not cleaned

* modified and cleanup win32 cpp console app.

* modified and cleanup win32 cpp console app.

* renamed to project

* modified project and solution for vs2017

* Updating projects to SkillInterfacePreview v0.5.2.12 (#12)

Updated ObjectDetectorSample to use ObjectDetectorSkill v0.0.0.4

* Updating samples to latest NuGet dependencies

* updating face sentiment analysis

* fixed bug when model file is loaded in app container

* added copyright headers

* added win32 console app using winrt/cpp language extention

* modified as per CR

* Removed 32-bit build configs for ObjectDetector skill
Added documentation about 32-bit builds being disabled for ObjDet
Added screenshot to ObjectDetector sample README

* Removed references to ARM64 builds, which currently aren't supported

* modified as per CR

* modified comments as per CR

* modified error handling

* modified as per CR

* modified as per CR

* modified as per CR

* Adding image files as input option for ObjectDetector sample app (#16)

* Add image file frame source
* Fixed resize to update on first frame

* Updating NuGet packaging to correctly support C++/WinRT consumers

* - renaming the CS example skjill project name from Contoso.FaceSentimentAnalyzer.csproj to Contoso.FaceSentimentAnalyzer_CS.csproj
- correcting .target files
- rev-up example .nuspec
- adjust build script

* User/lobourre/dahung mergefix (#17)

* Updating samples to latest NuGet dependencies

* updating face sentiment analysis

* Removed 32-bit build configs for ObjectDetector skill
Added documentation about 32-bit builds being disabled for ObjDet
Added screenshot to ObjectDetector sample README

* Removed references to ARM64 builds, which currently aren't supporte

--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_cpp/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_cpp/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.12" targetFramework="native" />
+  <package id="Contoso.FaceSentimentAnalyzer_CPP" version="0.0.0.6" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.15" targetFramework="native" />
 </packages>
