--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_winrtcpp/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysisConsole_winrtcpp/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.12" targetFramework="native" />
+  <package id="Contoso.FaceSentimentAnalyzer_CPP" version="0.0.0.6" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.15" targetFramework="native" />
 </packages>
